Changelog
=========

3.0.2 (unreleased)
------------------

- Import step depends on workflow step
  so that rules can manage specific transitions / states of profile.
  [thomasdesvenain]

- Add stub nextURL method to
  plone.app.contentrules.browser.adding.RuleAdding to prevent
  security WARNING message on startup:
  "Init Class plone.app.contentrules.browser.adding.RuleAdding has
  a security declaration for nonexistent method 'nextURL'"
  [smcmahon]


3.0.1 (2013-04-06)
------------------

- Use single quotes instead of double to avoid breaking translation
  [ericof]

- Fix multi assignment of rules
  [ericof]


3.0 (2013-03-05)
----------------

- Improve management pages user interface :
  - Improve and ajaxify rules table. Avoids scrolling and page reloads.
  - Improve rules table filter (multiple selection, more readable).
  - Improve content rules forms usability.
    We are redirected to edit form after a rule has been added.
  - Add form and Edit form are now consistent.
  - Notify user by many ways when a rule is not assigned anywhere yet.
  - We can assign a rule on whole site by a simple button.
  - Ajaxify conditions and actions reordering and removing.
  - Focus on elements after adding an action or a condition.
  - Improve rule edit pages breadcrumbs.
  - Added tests.
  [vsomogyi, thomasdesvenain, vangheem
  contribution wimbou,
  made @ploneconf2012 sprint]


2.2.1 (2013-01-01)
------------------

- Remove KSS dependency.
  [davisagli]


2.2.0 (2012-10-16)
------------------

- Unified the site setup html structure
  [TH-code]


2.1.9 (2012-08-30)
------------------

- Change mail template to use hex for curly brackets so that it doesn't barf when
  used with chameleon. This is a short term fix until https://github.com/malthe/chameleon/issues/88
  is appropriately fixed.
  [eleddy]

- Notify user with error message instead of a core dump if they set up a content
  mail action without the mailer set up. Prevents users from throwing computer out